tests/snapshots/shell__unfinished_prefix.snap
---
source: tests/shell.rs
expression: stderr
---
Error: expected vaild expression
   ╭─[unfinished_prefix:1:9]
   │
 1 │ echo .(!)
   │         ┬  
   │         ╰── found here
───╯

